<resources>
    <string name="app_name">FastCampusAndroid</string>

    <!-- word_  -->
    <!-- HTML 보다 쉬운게 XML, HTML 코드나 태그를 공부하는게 좋다.  -->
    <!-- 3개 국어 앱을 만들때는 국가별로 .xml 파일을 만들어서 스트링만 따로 불러오면 된다. -->
    <string name="word_dog">개</string>
    <string name="word_pig">돼지</string>
    <string name="word_horse">말</string>

    <string name="radio_red">빨강</string>
    <string name="radio_blue">파랑</string>
    <string name="radio_green">초록</string>

    <string name="btn_number_1">1</string>
    <string name="btn_number_2">2</string>
    <string name="btn_number_3">3</string>
    <string name="btn_number_4">4</string>
    <string name="btn_number_5">5</string>
    <string name="btn_number_6">6</string>
    <string name="btn_number_7">7</string>
    <string name="btn_number_8">8</string>
    <string name="btn_number_9">9</string>
    <string name="btn_number_0">0</string>

    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_multi">*</string>
    <string name="btn_div">/</string>

    <string name="btn_clear">clear</string>
    <string name="btn_equal">=</string>

    <string name="btn_prev"> &lt; </string> <!-- less than -->
    <string name="btn_next"> &gt; </string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_thread_async_task_main">ThreadAsyncTaskMain</string>
    <string name="title_activity_service_main">ServiceMain</string>
    <string name="title_activity_music_player">MusicPlayer</string> <!-- greater than -->


</resources>
