<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doyoon.android.fastcampusandroid.week2.quiz.CalculatorActivity">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_rowWeight="1"
            android:text="TextView" />

        <Button
            android:id="@+id/btnNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_1" />

        <Button
            android:id="@+id/btnNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_2" />

        <Button
            android:id="@+id/btnNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_3" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/btnNumber4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_4" />

        <Button
            android:id="@+id/btnNumber5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_5" />

        <Button
            android:id="@+id/btnNumber6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_6" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_sub" />

        <Button
            android:id="@+id/btnNumber7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_7" />

        <Button
            android:id="@+id/btnNumber8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_8" />

        <Button
            android:id="@+id/btnNumber9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_9" />

        <Button
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_multi" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_clear" />

        <Button
            android:id="@+id/btnNumber0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_number_0" />

        <Button
            android:id="@+id/btnEqul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_equal" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:elevation="1dp"
            android:text="@string/btn_div" />


    </GridLayout>
</android.support.constraint.ConstraintLayout>
