<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doyoon.android.fastcampusandroid.week2.lecture.BasicWidget.BasicWidgetActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="35dp"
        app:layout_constraintHorizontal_bias="0.174" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btnDog"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/word_dog"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.7"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/btnPig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/word_pig"
        app:layout_constraintLeft_toRightOf="@+id/btnDog"
        app:layout_constraintTop_toTopOf="@+id/btnDog" />

    <Button
        android:id="@+id/btnHorse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="8dp"
        android:text="@string/word_horse"
        app:layout_constraintLeft_toRightOf="@+id/btnPig"
        app:layout_constraintTop_toTopOf="@+id/btnPig"
        android:layout_marginTop="-14dp" />

    <TextView
        android:id="@+id/gridTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="57dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDog" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/gridTextView"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/gridTextView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/gridTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPig"
        app:layout_constraintHorizontal_bias="0.61" />

    <RadioGroup
        android:id="@+id/radioRgbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_red" />

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_blue" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_green" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SeekBar"
        tools:layout_editor_absoluteX="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/seekCount"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="16dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editText"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText4"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editText4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="text"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/seekBar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="num"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

</android.support.constraint.ConstraintLayout>
